--- a/Worksheet_generator.ipynb
+++ b/Worksheet_generator.ipynb
@@ -57,6 +57,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1dad070d",
+   "metadata": {},
+   "source": [
+    "# Factoring Quadratics: (a>1) Worksheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e0c06f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "class Quadratic_agreaterthan1:\n",
+    "    def __init__(self,a,b,c,d):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "        self.c = c\n",
+    "        self.d = d\n",
+    "\n",
+    "    def coefficient_one(self):\n",
+    "        coefficient_1 = self.a * self.b\n",
+    "        return coefficient_1\n",
+    "\n",
+    "    def coefficient_two(self):\n",
+    "        coefficient_2 = self.a * self.d + self.b * self.c\n",
+    "        # (x + b)(x + a) = x^2 + (a+b)x + (a*b)\n",
+    "        return coefficient_2\n",
+    "\n",
+    "    def constant_three(self):\n",
+    "        constant_3 = self.b * self.d\n",
+    "        return constant_3\n",
+    "\n",
+    "\n",
+    "file1 = open(\"quadratics_aval_greaterthan1.md\", \"a\")\n",
+    "\n",
+    "for x in range(0,10):\n",
+    "    random_list = [2,3,4,5,6,7,8,9]\n",
+    "    a = random.choice(random_list)\n",
+    "    b = random.choice(random_list)\n",
+    "    c = random.choice(random_list)\n",
+    "    d = random.choice(random_list)\n",
+    "    new_equation = Quadratic_agreaterthan1(a, b,c,d)\n",
+    "    file1.write(\"<div>\\n\")\n",
+    "    file1.write(f\"<h3>Exercise #{x + 1}</h3>\\n\")\n",
+    "    file1.write(f\"<p>Factor the following quadratic: &nbsp; {new_equation.coefficient_one()}x<sup>2</sup> + {new_equation.coefficient_two()}x + {new_equation.constant_three()}.</p>\\n\")\n",
+    "    \n",
+    "    file1.write(\"<br><br><br>\\n\")\n",
+    "    file1.write(f\"Answer: ({a}x + {b})({c}x + {d})\")\n",
+    "    file1.write(\"</div>\")\n",
+    "\n",
+    "\n",
+    "file1.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ea43189a",
    "metadata": {},
    "source": [
