--- a/wksht_test.ipynb
+++ b/wksht_test.ipynb
@@ -207,9 +207,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "712dd4b9",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "\n",
+    "```\n",
+    "<pre>\n",
+    "<div>\n",
+    "<p>Name: _________________________</p>                             \n",
+    "<p>Date: _____________________</p>\n",
+    "<p>Mr. Levinton</p>  <div>\n",
+    "<h3>Exercise #1</h3>\n",
+    "<p>Factor the following quadratic: &nbsp; 32x<sup>2</sup> + 28x + 8.</p>\n",
+    "<br><br><br>\n",
+    "Answer: (8x + 4)(3x + 2)</div><div>\n",
+    "<h3>Exercise #2</h3>\n",
+    "<p>Factor the following quadratic: &nbsp; 48x<sup>2</sup> + 90x + 36.</p>\n",
+    "<br><br><br>\n",
+    "Answer: (8x + 6)(7x + 6)</div><div>\n",
+    "<h3>Exercise #3</h3>\n",
+    "<p>Factor the following quadratic: &nbsp; 72x<sup>2</sup> + 137x + 63.</p>\n",
+    "<br><br><br>\n",
+    "Answer: (8x + 9)(9x + 7)</div><div>\n",
+    "<h3>Exercise #4</h3>\n",
+    "<p>Factor the following quadratic: &nbsp; 72x<sup>2</sup> + 95x + 56.</p>\n",
+    "<br><br><br>\n",
+    "Answer: (9x + 8)(4x + 7)</div><div>\n",
+    "<h3>Exercise #5</h3>\n",
+    "<p>Factor the following quadratic: &nbsp; 12x<sup>2</sup> + 30x + 54.</p>\n",
+    "<br><br><br>\n",
+    "Answer: (2x + 6)(2x + 9)</div><div>\n",
+    "<h3>Exercise #6</h3>\n",
+    "<p>Factor the following quadratic: &nbsp; 21x<sup>2</sup> + 26x + 6.</p>\n",
+    "<br><br><br>\n",
+    "Answer: (7x + 3)(4x + 2)</div><div>\n",
+    "<h3>Exercise #7</h3>\n",
+    "<p>Factor the following quadratic: &nbsp; 56x<sup>2</sup> + 67x + 40.</p>\n",
+    "<br><br><br>\n",
+    "Answer: (7x + 8)(4x + 5)</div><div>\n",
+    "<h3>Exercise #8</h3>\n",
+    "<p>Factor the following quadratic: &nbsp; 10x<sup>2</sup> + 52x + 30.</p>\n",
+    "<br><br><br>\n",
+    "Answer: (2x + 5)(8x + 6)</div><div>\n",
+    "<h3>Exercise #9</h3>\n",
+    "<p>Factor the following quadratic: &nbsp; 49x<sup>2</sup> + 70x + 42.</p>\n",
+    "<br><br><br>\n",
+    "Answer: (7x + 7)(4x + 6)</div><div>\n",
+    "<h3>Exercise #10</h3>\n",
+    "<p>Factor the following quadratic: &nbsp; 48x<sup>2</sup> + 82x + 48.</p>\n",
+    "<br><br><br>\n",
+    "Answer: (8x + 6)(3x + 8)</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d78fc6d",
+   "id": "f46e8ea9",
    "metadata": {},
    "outputs": [],
    "source": []
