--- a/Worksheet_generator.ipynb
+++ b/Worksheet_generator.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dad070d",
+   "id": "14c0872b",
    "metadata": {},
    "source": [
     "# Factoring Quadratics: (a>1) Worksheet"
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e0c06f2f",
+   "id": "64872ecb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
     "        self.d = d\n",
     "\n",
     "    def coefficient_one(self):\n",
-    "        coefficient_1 = self.a * self.b\n",
+    "        coefficient_1 = self.a * self.c\n",
     "        return coefficient_1\n",
     "\n",
     "    def coefficient_two(self):\n",
