added negatives(no pun intended) into each worksheet, please work!

--- a/Worksheet_generator.ipynb
+++ b/Worksheet_generator.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8111f176",
+   "id": "5831c30e",
    "metadata": {},
    "source": [
     "# Factoring Quadratics: (a>1) Worksheet"
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "386b0e97",
+   "execution_count": 5,
+   "id": "3cae4f3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "file1 = open(\"quadratics_aval_greaterthan1.md\", \"a\")\n",
     "\n",
     "for x in range(0,10):\n",
-    "    random_list = [2,3,4,5,6,7,8,9]\n",
+    "    random_list = [2,3,4,5,6,7,8,9,-2,-3,-4,-5,-6,-7,-8,-9]\n",
     "    a = random.choice(random_list)\n",
     "    b = random.choice(random_list)\n",
     "    c = random.choice(random_list)\n",
