tried to fix solving for y wksht with negatives

--- a/Worksheet_generator.ipynb
+++ b/Worksheet_generator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "5e2d4c9c",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
     "file1 = open(\"quadratics.md\", \"a\")\n",
     "\n",
     "for x in range(0,10):\n",
-    "    random_list = [2,3,4,5,6,7,8,9]\n",
+    "    random_list = [2,3,4,5,6,7,8,9,-2,-3,-4,-5,-6,-7,-8,-9]\n",
     "    a = random.choice(random_list)\n",
     "    b = random.choice(random_list)\n",
     "    new_equation = Quadratic(a, b)\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5831c30e",
+   "id": "8d7bf8e9",
    "metadata": {},
    "source": [
     "# Factoring Quadratics: (a>1) Worksheet"
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3cae4f3c",
+   "execution_count": 7,
+   "id": "dea54d91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "f03c784a",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
     "file1 = open(\"linear_equations.md\", \"a\")\n",
     "\n",
     "for x in range(0,10):\n",
-    "    random_list = [2,3,4,5,6,7,8,9]\n",
+    "    random_list = [2,3,4,5,6,7,8,9,-2,-3,-4,-5,-6,-7,-8,-9]\n",
     "    a = random.choice(random_list)\n",
     "    b = random.choice(random_list)\n",
     "    c = random.choice(random_list)\n",
@@ -164,7 +164,7 @@
     "{new_equation.coefficient_one()}x + {new_equation.coefficient_two()}y = {new_equation.constant_three()}.</p>\\n\")\n",
     "\n",
     "    file1.write(\"<br><br><br>\\n\")\n",
-    "    file1.write(f\"Answer: y = -{Fraction(numerator=a, denominator=b)}x + {Fraction(numerator=c, denominator=b)}\")\n",
+    "    file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x + {Fraction(numerator=c, denominator=b)}\")\n",
     "    file1.write(\"</div>\")\n",
     "\n",
     "\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "027c7cbd",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
     "file1 = open(\"variables_bothsides.md\", \"a\")\n",
     "\n",
     "for x in range(0,10):\n",
-    "    random_list = [2,3,4,5,6,7,8,9]\n",
+    "    random_list = [2,3,4,5,6,7,8,9,-2,-3,-4,-5,-6,-7,-8,-9]\n",
     "    a = random.choice(random_list)\n",
     "    b = random.choice(random_list)\n",
     "    c = random.choice(random_list)\n",
