--- a/Worksheet_generator.ipynb
+++ b/Worksheet_generator.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d7bf8e9",
+   "id": "0e452c40",
    "metadata": {},
    "source": [
     "# Factoring Quadratics: (a>1) Worksheet"
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dea54d91",
+   "id": "31a6cc5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,17 +158,17 @@
     "    b = random.choice(random_list)\n",
     "    c = random.choice(random_list)\n",
     "    new_equation = linear(a, b, c)\n",
-    "    file1.write(\"<div>\\n\")\n",
-    "    file1.write(f\"<h3>Problem {x + 1}</h3>\\n\")\n",
-    "    file1.write(f\"<p>Solve the following for y: &nbsp; \\\n",
-    "{new_equation.coefficient_one()}x + {new_equation.coefficient_two()}y = {new_equation.constant_three()}.</p>\\n\")\n",
+    "#     file1.write(\"<div>\\n\")\n",
+    "#     file1.write(f\"<h3>Problem {x + 1}</h3>\\n\")\n",
+    "#     file1.write(f\"<p>Solve the following for y: &nbsp; \\\n",
+    "# {new_equation.coefficient_one()}x + {new_equation.coefficient_two()}y = {new_equation.constant_three()}.</p>\\n\")\n",
     "\n",
-    "    file1.write(\"<br><br><br>\\n\")\n",
-    "    file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x + {Fraction(numerator=c, denominator=b)}\")\n",
-    "    file1.write(\"</div>\")\n",
+    "#     file1.write(\"<br><br><br>\\n\")\n",
+    "#     file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x + {Fraction(numerator=c, denominator=b)}\")\n",
+    "#     file1.write(\"</div>\")\n",
     "\n",
     "\n",
-    "file1.close()"
+    "# file1.close()"
    ]
   },
   {
