--- a/Worksheet_generator.ipynb
+++ b/Worksheet_generator.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e452c40",
+   "id": "89f37b4f",
    "metadata": {},
    "source": [
     "# Factoring Quadratics: (a>1) Worksheet"
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "31a6cc5b",
+   "id": "432ba6e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f03c784a",
    "metadata": {},
    "outputs": [],
@@ -158,6 +158,22 @@
     "    b = random.choice(random_list)\n",
     "    c = random.choice(random_list)\n",
     "    new_equation = linear(a, b, c)\n",
+    "    # Adjust the coefficients and constants based on the sign\n",
+    "    sign_a = '' if a < 0 else '+'\n",
+    "    sign_b = '' if b < 0 else '+'\n",
+    "    sign_c = '' if c < 0 else '+'\n",
+    "\n",
+    "    file1.write(\"<div>\\n\")\n",
+    "    file1.write(f\"<h3>Problem {x + 1}</h3>\\n\")\n",
+    "    file1.write(f\"<p>Solve the following for y: &nbsp; \"\n",
+    "                f\"{new_equation.coefficient_one()}x {sign_b} {new_equation.coefficient_two()}y = \"\n",
+    "                f\"{new_equation.constant_three()}.</p>\\n\")\n",
+    "\n",
+    "    file1.write(\"<br><br><br>\\n\")\n",
+    "    file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x {sign_c}  {Fraction(numerator=abs(c), denominator=b)}\")\n",
+    "    file1.write(\"</div>\")\n",
+    "\n",
+    "file1.close()\n",
     "#     file1.write(\"<div>\\n\")\n",
     "#     file1.write(f\"<h3>Problem {x + 1}</h3>\\n\")\n",
     "#     file1.write(f\"<p>Solve the following for y: &nbsp; \\\n",
