--- a/Worksheet_generator.ipynb
+++ b/Worksheet_generator.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc246cfb",
+   "id": "ded75717",
    "metadata": {},
    "source": [
     "# Factoring Quadratics: (a>1) Worksheet"
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "27c8b811",
+   "id": "652ffe48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "f03c784a",
    "metadata": {},
    "outputs": [],
@@ -162,15 +162,16 @@
     "    sign_a = '-' if a < 0 else '+'\n",
     "    sign_b = '-' if b < 0 else '+'\n",
     "    sign_c = '-' if c < 0 else '+'\n",
+    "    sign_c_over_b = '-' if (c/b) < 0 else '+'\n",
     "\n",
     "    file1.write(\"<div>\\n\")\n",
     "    file1.write(f\"<h3>Problem {x + 1}</h3>\\n\")\n",
     "    file1.write(f\"<p>Solve the following for y: &nbsp; \"\n",
-    "                f\"{new_equation.coefficient_one()}x {sign_b} {new_equation.coefficient_two()}y = \"\n",
+    "                f\"{new_equation.coefficient_one()}x {sign_b} {abs(new_equation.coefficient_two())}y = \"\n",
     "                f\"{new_equation.constant_three()}.</p>\\n\")\n",
     "\n",
     "    file1.write(\"<br><br><br>\\n\")\n",
-    "    file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x {sign_c} {Fraction(numerator=abs(c), denominator=b)}\")\n",
+    "    file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x {sign_c} {Fraction(numerator=abs(c), denominator=abs(b))}\")\n",
     "    file1.write(\"</div>\")\n",
     "\n",
     "file1.close()\n",
