fixed quadratics wksht format with negatives(a=1)

--- a/Worksheet_generator.ipynb
+++ b/Worksheet_generator.ipynb
@@ -42,10 +42,12 @@
     "    random_list = [2,3,4,5,6,7,8,9,-2,-3,-4,-5,-6,-7,-8,-9]\n",
     "    a = random.choice(random_list)\n",
     "    b = random.choice(random_list)\n",
+    "    sign_a_and_b = '-' if (a + b) < 0 else '+'\n",
+    "    sign_atimesb = '-' if (a*b) < 0 else '+'\n",
     "    new_equation = Quadratic(a, b)\n",
     "    file1.write(\"<div>\\n\")\n",
     "    file1.write(f\"<h3>Exercise #{x + 1}</h3>\\n\")\n",
-    "    file1.write(f\"<p>Factor the following quadratic: &nbsp; x<sup>2</sup> + {new_equation.coefficient_two()}x + {new_equation.constant_three()}.</p>\\n\")\n",
+    "    file1.write(f\"<p>Factor the following quadratic: &nbsp; x<sup>2</sup> {sign_a_and_b} abs({new_equation.coefficient_two()})x sign_atimesb abs({new_equation.constant_three()}).</p>\\n\")\n",
     "    \n",
     "    file1.write(\"<br><br><br>\\n\")\n",
     "    file1.write(f\"Answer: (x + {a})(x + {b})\")\n",
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded75717",
+   "id": "b757e731",
    "metadata": {},
    "source": [
     "# Factoring Quadratics: (a>1) Worksheet"
@@ -66,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "652ffe48",
+   "id": "fdc0873c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "f03c784a",
    "metadata": {},
    "outputs": [],
@@ -171,21 +173,10 @@
     "                f\"{new_equation.constant_three()}.</p>\\n\")\n",
     "\n",
     "    file1.write(\"<br><br><br>\\n\")\n",
-    "    file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x {sign_c} {Fraction(numerator=abs(c), denominator=abs(b))}\")\n",
+    "    file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x {sign_c_over_b} {Fraction(numerator=abs(c), denominator=abs(b))}\")\n",
     "    file1.write(\"</div>\")\n",
     "\n",
-    "file1.close()\n",
-    "#     file1.write(\"<div>\\n\")\n",
-    "#     file1.write(f\"<h3>Problem {x + 1}</h3>\\n\")\n",
-    "#     file1.write(f\"<p>Solve the following for y: &nbsp; \\\n",
-    "# {new_equation.coefficient_one()}x + {new_equation.coefficient_two()}y = {new_equation.constant_three()}.</p>\\n\")\n",
-    "\n",
-    "#     file1.write(\"<br><br><br>\\n\")\n",
-    "#     file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x + {Fraction(numerator=c, denominator=b)}\")\n",
-    "#     file1.write(\"</div>\")\n",
-    "\n",
-    "\n",
-    "# file1.close()"
+    "file1.close()"
    ]
   },
   {
