actually fixed it this time

--- a/Worksheet_generator.ipynb
+++ b/Worksheet_generator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "5e2d4c9c",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
     "    new_equation = Quadratic(a, b)\n",
     "    file1.write(\"<div>\\n\")\n",
     "    file1.write(f\"<h3>Exercise #{x + 1}</h3>\\n\")\n",
-    "    file1.write(f\"<p>Factor the following quadratic: &nbsp; x<sup>2</sup> {sign_a_and_b} abs({new_equation.coefficient_two()})x sign_atimesb abs({new_equation.constant_three()}).</p>\\n\")\n",
+    "    file1.write(f\"<p>Factor the following quadratic: &nbsp; x<sup>2</sup> {sign_a_and_b} {abs(new_equation.coefficient_two())}x {sign_atimesb} {abs(new_equation.constant_three())}.</p>\\n\")\n",
     "    \n",
     "    file1.write(\"<br><br><br>\\n\")\n",
     "    file1.write(f\"Answer: (x + {a})(x + {b})\")\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b757e731",
+   "id": "97a165fe",
    "metadata": {},
    "source": [
     "# Factoring Quadratics: (a>1) Worksheet"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fdc0873c",
+   "id": "954501d6",
    "metadata": {},
    "outputs": [],
    "source": [
