added readme file

--- a/wksht_test.ipynb
+++ b/wksht_test.ipynb
@@ -262,9 +262,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "416cfa7e",
+   "metadata": {},
+   "source": [
+    "<pre>\n",
+    "<div>\n",
+    "<p>Name: _________________________</p>\n",
+    "<p>Date: _____________________</p>\n",
+    "<p>Mr. Levinton</p>\n",
+    "<div>\n",
+    "<h3>Problem 1</h3>\n",
+    "<p>Solve the following for y: &nbsp; -7x - 8y = -3.</p>\n",
+    "<br><br><br>\n",
+    "</div><div>\n",
+    "<h3>Problem 2</h3>\n",
+    "<p>Solve the following for y: &nbsp; 6x - 6y = -5.</p>\n",
+    "<br><br><br>\n",
+    "</div><div>\n",
+    "<h3>Problem 3</h3>\n",
+    "<p>Solve the following for y: &nbsp; -9x + 7y = 8.</p>\n",
+    "<br><br><br>\n",
+    "</div><div>\n",
+    "<h3>Problem 4</h3>\n",
+    "<p>Solve the following for y: &nbsp; 9x - 9y = 5.</p>\n",
+    "<br><br><br>\n",
+    "</div><div>\n",
+    "<h3>Problem 5</h3>\n",
+    "<p>Solve the following for y: &nbsp; 8x + 6y = -5.</p>\n",
+    "<br><br><br>\n",
+    "</div><div>\n",
+    "<h3>Problem 6</h3>\n",
+    "<p>Solve the following for y: &nbsp; 4x - 5y = -4.</p>\n",
+    "<br><br><br>\n",
+    "</div><div>\n",
+    "<h3>Problem 7</h3>\n",
+    "<p>Solve the following for y: &nbsp; -3x + 2y = 5.</p>\n",
+    "<br><br><br>\n",
+    "</div><div>\n",
+    "<h3>Problem 8</h3>\n",
+    "<p>Solve the following for y: &nbsp; 8x + 8y = -5.</p>\n",
+    "<br><br><br>\n",
+    "</div><div>\n",
+    "<h3>Problem 9</h3>\n",
+    "<p>Solve the following for y: &nbsp; 6x - 6y = 9.</p>\n",
+    "<br><br><br>\n",
+    "</div><div>\n",
+    "<h3>Problem 10</h3>\n",
+    "<p>Solve the following for y: &nbsp; 8x - 6y = 9.</p>\n",
+    "<br><br><br>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f46e8ea9",
+   "id": "74a0c144",
    "metadata": {},
    "outputs": [],
    "source": []
