--- a/Worksheet_generator.ipynb
+++ b/Worksheet_generator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "5e2d4c9c",
    "metadata": {},
    "outputs": [],
@@ -42,6 +42,8 @@
     "    random_list = [2,3,4,5,6,7,8,9,-2,-3,-4,-5,-6,-7,-8,-9]\n",
     "    a = random.choice(random_list)\n",
     "    b = random.choice(random_list)\n",
+    "    sign_a = '-' if a < 0 else '+'\n",
+    "    sign_b = '-' if b < 0 else '+'\n",
     "    sign_a_and_b = '-' if (a + b) < 0 else '+'\n",
     "    sign_atimesb = '-' if (a*b) < 0 else '+'\n",
     "    new_equation = Quadratic(a, b)\n",
@@ -50,7 +52,7 @@
     "    file1.write(f\"<p>Factor the following quadratic: &nbsp; x<sup>2</sup> {sign_a_and_b} {abs(new_equation.coefficient_two())}x {sign_atimesb} {abs(new_equation.constant_three())}.</p>\\n\")\n",
     "    \n",
     "    file1.write(\"<br><br><br>\\n\")\n",
-    "    file1.write(f\"Answer: (x + {a})(x + {b})\")\n",
+    "    file1.write(f\"Answer: (x {sign_a} {abs(a)})(x {sign_b} {abs(b)})\")\n",
     "    file1.write(\"</div>\")\n",
     "\n",
     "\n",
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97a165fe",
+   "id": "ae037387",
    "metadata": {},
    "source": [
     "# Factoring Quadratics: (a>1) Worksheet"
@@ -68,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "954501d6",
+   "id": "25e47f0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +176,73 @@
     "\n",
     "    file1.write(\"<br><br><br>\\n\")\n",
     "    file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x {sign_c_over_b} {Fraction(numerator=abs(c), denominator=abs(b))}\")\n",
+    "    file1.write(\"</div>\")\n",
+    "\n",
+    "file1.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecbbb922",
+   "metadata": {},
+   "source": [
+    "# Linear Equations: Solving for y worksheet (no key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cc8c8b89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from fractions import Fraction\n",
+    "\n",
+    "\n",
+    "class linear:\n",
+    "    def __init__(self,a,b,c):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "        self.c = c\n",
+    "    def coefficient_one(self):\n",
+    "        coefficient_1 = self.a\n",
+    "        return coefficient_1\n",
+    "    def coefficient_two(self):\n",
+    "        coefficient_2 = self.b\n",
+    "        # (x + b)(x + a) = x^2 + (a+b)x + (a*b)\n",
+    "        return coefficient_2\n",
+    "    def constant_three(self):\n",
+    "        constant_3 = self.c\n",
+    "        return constant_3\n",
+    "\n",
+    "\n",
+    "file1 = open(\"linear_equations_raw.md\", \"a\")\n",
+    "file1.write(\"<pre>\\n\")\n",
+    "file1.write(\"<div>\\n\")\n",
+    "file1.write(\"<p>Name: _________________________</p>\\n\")                             \n",
+    "file1.write(\"<p>Date: _____________________</p>\\n\")\n",
+    "file1.write(\"<p>Mr. Levinton</p>\\n\")\n",
+    "for x in range(0,10):\n",
+    "    random_list = [2,3,4,5,6,7,8,9,-2,-3,-4,-5,-6,-7,-8,-9]\n",
+    "    a = random.choice(random_list)\n",
+    "    b = random.choice(random_list)\n",
+    "    c = random.choice(random_list)\n",
+    "    new_equation = linear(a, b, c)\n",
+    "    # Adjust the coefficients and constants based on the sign\n",
+    "    sign_a = '-' if a < 0 else '+'\n",
+    "    sign_b = '-' if b < 0 else '+'\n",
+    "    sign_c = '-' if c < 0 else '+'\n",
+    "    sign_c_over_b = '-' if (c/b) < 0 else '+'\n",
+    " \n",
+    "    file1.write(\"<div>\\n\")\n",
+    "    file1.write(f\"<h3>Problem {x + 1}</h3>\\n\")\n",
+    "    file1.write(f\"<p>Solve the following for y: &nbsp; \"\n",
+    "                f\"{new_equation.coefficient_one()}x {sign_b} {abs(new_equation.coefficient_two())}y = \"\n",
+    "                f\"{new_equation.constant_three()}.</p>\\n\")\n",
+    "\n",
+    "    file1.write(\"<br><br><br>\\n\")\n",
+    "#     file1.write(f\"Answer: y = {Fraction(numerator=-a, denominator=b)}x {sign_c_over_b} {Fraction(numerator=abs(c), denominator=abs(b))}\")\n",
     "    file1.write(\"</div>\")\n",
     "\n",
     "file1.close()"
